crates/aura-core/tests/boundaries/secret_bytes_raw_field_private.stderr
error[E0616]: field `bytes` of struct `SecretBytes` is private
 --> tests/boundaries/secret_bytes_raw_field_private.rs:5:20
  |
5 |     let _ = secret.bytes;
  |                    ^^^^^ private field
